--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-node_modules/
-tools/
-coverage/
+**/.DS_Store
+
+# no need to keep stuff pulled remotely
+node_modules
+build/typings
+
+# no js, just typescript
+*.js
+*.js.map
+# .. except these javascript files... these must stay
+!build/karma.conf.js
+!src/externals/PickaDate.js
