--- a/package.json
+++ b/package.json
@@ -23,27 +23,37 @@
     "office-ui-fabric"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-install": "tsd install -r -o --save-dev"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
+    "angular": "^1.4.8",
+    "angular-mocks": "^1.4.8",
     "chalk": "^1.1.1",
-    "coveralls": "^2.11.4",
+    "coveralls": "^2.11.6",
     "gulp": "^3.9.0",
-    "gulp-if": "^1.2.5",
-    "gulp-istanbul": "^0.10.0",
-    "gulp-jscs": "^2.0.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-mocha": "^2.1.3",
-    "gulp-print": "^1.2.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-help": "^1.6.1",
+    "gulp-if": "^2.0.0",
+    "gulp-istanbul": "^0.10.3",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-print": "^2.0.1",
+    "gulp-rimraf": "^0.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-task-listing": "^1.0.1",
-    "gulp-util": "^3.0.6",
-    "istanbul": "^0.3.20",
-    "jscs": "^2.1.1",
-    "jscs-jsdoc": "^1.1.0",
-    "jshint-stylish": "^2.0.1",
-    "mocha": "^2.3.2",
-    "yargs": "^3.25.0"
+    "gulp-tslint": "^4.2.1",
+    "gulp-typescript": "^2.10.0",
+    "gulp-util": "^3.0.7",
+    "istanbul": "^0.4.1",
+    "jasmine-core": "^2.4.1",
+    "jquery": "^2.1.4",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-typescript-preprocessor": "0.0.21",
+    "phantomjs": "^1.9.19",
+    "run-sequence": "^1.1.5",
+    "tslint": "^3.2.0",
+    "yargs": "^3.31.0"
   }
 }
