--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 language: node_js
 
 node_js:
-- stable
+  - stable
 
 before_script:
   # install dependencies
@@ -14,7 +14,12 @@ before_script:
   - tsc -p ./
 
 script:
-- "./node_modules/karma/bin/karma start ./build/karma.conf.js --single-run"
+  # execute all tests with code coverage analysis
+  - "./node_modules/istanbul/lib/cli.js cover ./node_modules/karma/bin/karma -- start ./build/karma.conf.js --single-run"
+
+after_script:
+  # send code coverage report to coveralls.io
+  - "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
 
 notifications:
   slack:
