--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jquery": "^2.1.4",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-typescript-preprocessor": "0.0.21",
