excluded coverage output

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 node_modules
 build/typings
 
+# don't keep coverage
+coverage/
+
 # no js, just typescript
 *.js
 *.js.map
+
 # .. except these javascript files... these must stay
 !build/karma.conf.js
 !src/externals/PickaDate.js
