add icon directive and updated testing docs
This introduces a new directive, <uif-icon /> that renders the Office UI Fabric icon. It also includes updates to the testing process & docs for ease of use

Closes PR #46 & issue #40

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,8 @@ coverage/
 *.js
 *.js.map
 
+# .. except javascript files used in demos
+!src/components/*/demo*/*.js
+
 # .. except these javascript files... these must stay
 !src/externals/PickaDate.js
