--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "karma-typescript-preprocessor": "0.0.21",
+    "karma-webpack": "^1.7.0",
     "phantomjs": "^1.9.19",
     "run-sequence": "^1.1.5",
     "ts-loader": "^0.7.2",
