--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gulp-util": "^3.0.7",
     "gulp-webpack": "^1.5.0",
     "istanbul": "^0.4.1",
+    "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.4.1",
     "jquery": "^2.1.4",
     "karma": "^0.13.15",
