updated contributor list in `package.json`; sorted components in `components.ts`

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "contributors": [
     "Connell, Andrew <me@andrewconnell.com>",
+    "Czopek, Jerry <jerzy.czopek@outlook.com>",
     "Oldengarm, Roland <me@rolandoldengarm.com>"
   ],
   "homepage": "https://github.com/ngOfficeUIFabric/ng-officeuifabric#readme",
