updated automated TravisCI builds & docs
Updated TravisCI config to include vetting TypeScript; added guideline 006 to directive attribute naming.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ before_script:
 script:
   # execute all tests & gen code coverage report
   - "./node_modules/karma/bin/karma start ./config/karma.js --single-run"
+  # vet all code
+  - "gulp vet-lib-ts --verbose"
 
 after_script:
   # send code coverage report to coveralls.io
