--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sharepoint"
   ],
   "scripts": {
-    "dev-install": "tsd install -r -o --save-dev"
+    "dev-install": "tsd install -ros"
   },
   "dependencies": {
     "angular": "^1.4.8",
