feat(contextual-menu): added attribute validation
Added attribute validation and error logging to the console to address directive guidelines [007](https://github.com/ngOfficeUIFabric/ng-officeuifabric/blob/master/docs/guides/DIRECTIVE-CHECKLIST.md#directive-attribute-validation) & [008](https://github.com/ngOfficeUIFabric/ng-officeuifabric/blob/master/docs/guides/DIRECTIVE-CHECKLIST.md#error-messages). Also updated `package.json` to explicitly set Angular version 1.4.8 as investigating issue introduced in Angular 1.4.9 (not sure if Angular issue or with ngOfficeUiFabric).

Closes #99. Closes #112.

--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "dev-install": "tsd install -ros"
   },
   "dependencies": {
-    "angular": "^1.4.8",
+    "angular": "1.4.8",
     "office-ui-fabric": "^1.2.1"
   },
   "devDependencies": {
-    "angular-animate": "^1.4.8",
-    "angular-mocks": "^1.4.8",
+    "angular-animate": "1.4.8",
+    "angular-mocks": "1.4.8",
     "chalk": "^1.1.1",
     "coveralls": "^2.11.6",
     "gulp": "^3.9.0",
