--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "angular-animate": "^1.4.9",
     "angular-mocks": "^1.4.9",
+    "browser-sync": "^2.11.1",
     "chalk": "^1.1.1",
     "coveralls": "^2.11.6",
     "gulp": "^3.9.0",
@@ -53,6 +54,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-help": "^1.6.1",
     "gulp-if": "^2.0.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-insert": "^0.5.0",
     "gulp-istanbul": "^0.10.3",
     "gulp-load-plugins": "^1.1.0",
