--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "gulp-debug": "^2.1.2",
     "gulp-help": "^1.6.1",
     "gulp-if": "^2.0.0",
-    "gulp-plumber": "^1.0.1",
     "gulp-insert": "^0.5.0",
     "gulp-istanbul": "^0.10.3",
     "gulp-load-plugins": "^1.1.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.2.0",
@@ -68,7 +68,6 @@
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
-    "gulp-webpack": "^1.5.0",
     "istanbul": "^0.4.1",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.4.1",
@@ -79,15 +78,16 @@
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-jasmine-jquery": "^0.1.1",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-spec-reporter": "0.0.23",
     "karma-webpack": "^1.7.0",
-    "phantomjs": "^2.1.2",
+    "phantomjs-prebuilt": "^2.1.4",
     "run-sequence": "^1.1.5",
     "ts-loader": "^0.8.0",
     "tslint": "^3.2.0",
     "webpack": "^1.12.9",
+    "webpack-stream": "^3.1.0",
     "yargs": "^3.31.0"
   }
 }
