--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "karma-spec-reporter": "0.0.23",
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.4",
+    "pickadate": "^3.5.3",
     "run-sequence": "^1.1.5",
     "ts-loader": "^0.8.0",
     "tslint": "^3.2.0",
