chore(): add utility script for pr checks
Add script to help in pulling down and checking a PR locally to automate and speed the process. Also added scripts to `package.json` to simplify in some common tasks.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "sharepoint"
   ],
   "scripts": {
-    "dev-install": "tsd install -ros"
+    "build": "npm run build:ts && npm run build:lib",
+    "build:ts": "tsc -p ./",
+    "build:lib": "gulp build-lib && gulp build-lib --dev",
+    "dev-install": "tsd install -ros",
+    "test": "npm run build:ts && gulp test --specs"
   },
   "dependencies": {
     "angular": "1.4.9",
