--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 
 script:
   # execute all tests & gen code coverage report
-  - "./node_modules/karma/bin/karma start ./config/karma.js --single-run"
+  - "./node_modules/karma/bin/karma start ./build/config/karma.js --single-run"
   # vet all code
   - "gulp vet-lib-ts --verbose"
 
