--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "angular": "1.4.9",
+    "ng-metadata": "1.1.4",
     "office-ui-fabric": "2.1.0"
   },
   "devDependencies": {
