chore(build): replace TravisCI with CircleCI
Move from TravisCI to CircleCI for automated builds, continuous integration & deployment.

Closes #224.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 # no need to keep stuff pulled remotely
 node_modules
 
-# don't keep coverage
-coverage/
+# don't keep coverage test reports
+reports/
 
 # no js, just typescript
 *.js
