feat(messagebanner) added directive
Add `<uif-messagebanner>` directive

Closes #299.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "Connell, Andrew <me@andrewconnell.com>",
     "Czopek, Jerry <jerzy.czopek@outlook.com>",
     "Gandhi, Jigar <jigarr.gandhi@gmail.com>",
-    "Krüger, Andi <Andreas.Krueger@comparex-group.com>",
+    "Krüger, Andi <solutions@andikrueger.de>",
     "Mastykarz, Waldek <waldek@mastykarz.nl>",
     "Meilleur, John <john@meilleur.ca>",
     "Molberg, Steen <stm@globeteam.com>",
