--- a/package.json
+++ b/package.json
@@ -56,55 +56,55 @@
     "angular-animate": "1.5.5",
     "angular-mocks": "1.5.5",
     "angular-sanitize": "1.5.5",
-    "browser-sync": "^2.11.1",
-    "chalk": "^1.1.1",
+    "browser-sync": "2.12.10",
+    "chalk": "1.1.3",
     "commitizen": "2.8.1",
-    "coveralls": "^2.11.9",
+    "coveralls": "2.11.9",
     "cz-conventional-changelog": "1.1.6",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-debug": "^2.1.2",
-    "gulp-help": "^1.6.1",
-    "gulp-if": "^2.0.0",
-    "gulp-insert": "^0.5.0",
-    "gulp-istanbul": "^0.10.3",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-print": "^2.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-rimraf": "^0.2.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.0",
+    "gulp-debug": "2.1.2",
+    "gulp-help": "1.6.1",
+    "gulp-if": "2.0.1",
+    "gulp-insert": "0.5.0",
+    "gulp-istanbul": "0.10.4",
+    "gulp-load-plugins": "1.2.4",
+    "gulp-plumber": "1.1.0",
+    "gulp-print": "2.0.1",
+    "gulp-rename": "1.2.2",
+    "gulp-rimraf": "0.2.0",
+    "gulp-sourcemaps": "1.6.0",
     "gulp-strip-comments": "2.4.3",
-    "gulp-task-listing": "^1.0.1",
-    "gulp-tslint": "^5.0.0",
-    "gulp-typescript": "^2.10.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
-    "istanbul": "^0.4.1",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "jasmine-core": "^2.4.1",
-    "jasmine-jquery": "^2.1.1",
-    "jquery": "^2.2.0",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-jquery": "^0.1.1",
-    "karma-junit-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.6",
+    "gulp-task-listing": "1.0.1",
+    "gulp-tslint": "5.0.0",
+    "gulp-typescript": "2.13.5",
+    "gulp-uglify": "1.5.3",
+    "gulp-util": "3.0.7",
+    "istanbul": "0.4.3",
+    "istanbul-instrumenter-loader": "0.2.0",
+    "jasmine-core": "2.4.1",
+    "jasmine-jquery": "2.1.1",
+    "jquery": "2.2.4",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "1.0.1",
+    "karma-coverage": "1.0.0",
+    "karma-jasmine": "1.0.2",
+    "karma-jasmine-jquery": "0.1.1",
+    "karma-junit-reporter": "1.0.0",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
-    "phantomjs-prebuilt": "^2.1.4",
+    "karma-webpack": "1.7.0",
+    "phantomjs-prebuilt": "2.1.7",
     "pickadate": "3.5.6",
-    "run-sequence": "^1.1.5",
-    "ts-loader": "^0.8.0",
-    "tslint": "^3.5.0",
-    "webpack": "^1.12.9",
-    "webpack-stream": "^3.1.0",
-    "xmldom": "^0.1.22",
+    "run-sequence": "1.2.1",
+    "ts-loader": "0.8.2",
+    "tslint": "3.10.2",
+    "webpack": "1.13.1",
+    "webpack-stream": "3.2.0",
+    "xmldom": "0.1.22",
     "xpath": "0.0.23",
-    "yargs": "^4.2.0"
+    "yargs": "4.7.1"
   },
   "config": {
     "commitizen": {
