--- a/package.json
+++ b/package.json
@@ -96,10 +96,13 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.7.0",
     "phantomjs-prebuilt": "2.1.8",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs2-ext": "^0.2.2",
     "pickadate": "3.5.6",
     "run-sequence": "1.2.2",
     "ts-loader": "0.8.2",
-    "tslint": "3.13.0",
+    "tslint": "3.10.2",
+    "wallaby-webpack": "0.0.22",
     "webpack": "1.13.1",
     "webpack-stream": "3.2.0",
     "xmldom": "0.1.22",
