--- a/package.json
+++ b/package.json
@@ -95,13 +95,14 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.8.0",
-    "phantomjs-prebuilt": "2.1.13",
     "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "2.1.13",
     "phantomjs2-ext": "^0.2.2",
     "pickadate": "3.5.6",
     "run-sequence": "1.2.2",
     "ts-loader": "0.9.0",
     "tslint": "3.15.1",
+    "typescript": "2.0.3",
     "wallaby-webpack": "0.0.25",
     "webpack": "1.13.2",
     "webpack-stream": "3.2.0",
