chore(build): update tslint config
Recent updates to TSLINT & TypeScript compiler required updates to TSLint rules. Added switches to TSC configuration. Added & removed some obsolete / replaced rules in TSLINT config.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "removeComments": true
+    "removeComments": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true
   },
   "exclude": [
     "node_modules"
