--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "removeComments": true,
-    "noUnusedParameters": true,
-    "noUnusedLocals": true
+    "removeComments": true
   },
   "exclude": [
     "node_modules"
