--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/colors": "0.6.33",
     "@types/express": "4.0.34",
     "@types/express-serve-static-core": "4.0.39",
+    "@types/glob": "^5.0.30",
     "@types/gulp": "3.8.32",
     "@types/gulp-concat": "0.0.29",
     "@types/gulp-help": "0.0.32",
@@ -102,9 +103,12 @@
     "commitizen": "2.9.2",
     "coveralls": "2.11.15",
     "cz-conventional-changelog": "1.2.0",
+    "eslint": "^3.12.2",
+    "glob": "^7.1.1",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-debug": "3.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-help": "1.6.1",
     "gulp-if": "2.0.2",
     "gulp-insert": "0.5.0",
