--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "@types/browser-sync": "0.0.34",
     "@types/chalk": "0.4.31",
     "@types/chokidar": "1.4.31",
-    "@types/colors": "1.1.0",
-    "@types/express": "4.0.34",
+    "@types/colors": "1.1.1",
+    "@types/express": "4.0.35",
     "@types/express-serve-static-core": "4.0.40",
     "@types/glob": "^5.0.30",
     "@types/gulp": "3.8.32",
@@ -75,14 +75,14 @@
     "@types/gulp-typescript": "0.0.32",
     "@types/gulp-uglify": "0.0.29",
     "@types/gulp-util": "3.0.30",
-    "@types/jasmine": "2.5.38",
-    "@types/jasmine-jquery": "1.5.28",
-    "@types/jquery": "2.0.39",
+    "@types/jasmine": "2.5.43",
+    "@types/jasmine-jquery": "1.5.29",
+    "@types/jquery": "2.0.40",
     "@types/karma": "0.13.33",
     "@types/log4js": "0.0.32",
     "@types/micromatch": "2.3.29",
     "@types/mime": "0.0.29",
-    "@types/node": "6.0.57",
+    "@types/node": "7.0.5",
     "@types/orchestrator": "0.0.30",
     "@types/parse-glob": "3.0.29",
     "@types/pickadate": "3.5.28",
@@ -95,45 +95,45 @@
     "@types/uglify-js": "2.6.28",
     "@types/vinyl": "2.0.0",
     "@types/wallabyjs": "0.0.5",
-    "@types/webpack": "2.1.0",
+    "@types/webpack": "2.2.6",
     "@types/xmldom": "^0.1.28",
-    "@types/yargs": "6.5.0",
+    "@types/yargs": "6.6.0",
     "angular-animate": "1.5.8",
     "angular-mocks": "1.5.8",
     "angular-sanitize": "1.5.8",
-    "browser-sync": "2.18.5",
+    "browser-sync": "2.18.8",
     "chalk": "1.1.3",
-    "commitizen": "2.9.3",
-    "coveralls": "2.11.15",
+    "commitizen": "2.9.6",
+    "coveralls": "2.11.16",
     "cz-conventional-changelog": "1.2.0",
-    "eslint": "^3.12.2",
-    "glob": "^7.1.1",
+    "eslint": "3.15.0",
+    "glob": "7.1.1",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
-    "gulp-debug": "3.0.0",
-    "gulp-eslint": "^3.0.1",
+    "gulp-debug": "3.1.0",
+    "gulp-eslint": "3.0.1",
     "gulp-help": "1.6.1",
     "gulp-if": "2.0.2",
     "gulp-insert": "0.5.0",
     "gulp-istanbul": "1.1.1",
-    "gulp-load-plugins": "1.4.0",
+    "gulp-load-plugins": "1.5.0",
     "gulp-plumber": "1.1.0",
     "gulp-print": "2.0.1",
     "gulp-rename": "1.2.2",
     "gulp-rimraf": "0.2.1",
-    "gulp-sourcemaps": "1.9.1",
-    "gulp-strip-comments": "2.4.3",
+    "gulp-sourcemaps": "2.4.1",
+    "gulp-strip-comments": "2.4.4",
     "gulp-task-listing": "1.0.1",
-    "gulp-tslint": "7.0.1",
-    "gulp-typescript": "3.1.3",
-    "gulp-uglify": "2.0.0",
+    "gulp-tslint": "7.1.0",
+    "gulp-typescript": "3.1.5",
+    "gulp-uglify": "2.0.1",
     "gulp-util": "3.0.8",
     "istanbul": "0.4.5",
-    "istanbul-instrumenter-loader": "1.2.0",
+    "istanbul-instrumenter-loader": "2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-jquery": "2.1.1",
     "jquery": "3.1.1",
-    "karma": "1.3.0",
+    "karma": "1.4.1",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.0",
@@ -142,16 +142,16 @@
     "karma-phantomjs-launcher": "1.0.2",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "1.8.1",
+    "karma-webpack": "2.0.2",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.14",
     "phantomjs2-ext": "0.2.2",
     "pickadate": "3.5.6",
     "run-sequence": "1.2.2",
-    "ts-loader": "1.3.3",
-    "tslint": "4.2.0",
-    "typescript": "2.1.4",
-    "wallaby-webpack": "0.0.27",
+    "ts-loader": "2.0.0",
+    "tslint": "4.4.2",
+    "typescript": "2.1.6",
+    "wallaby-webpack": "0.0.33",
     "webpack": "1.14.0",
     "webpack-stream": "3.2.0",
     "xmldom": "0.1.27",
