fix(dropdown): change option text rendering
Change the `option` tag text to use `.text()` instead of `.html()` to avoid escaping of html.

Fixes #487.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "Sharshenov, Rustam <github@sub.rustam.guru>",
     "Struyf, Elio <info@estruyf.be>",
     "West, Tobias <tobiaswest83>",
-    "White, Thomas <tdwhite0@gmail.com>"
+    "White, Thomas <tdwhite0@gmail.com>",
+    "Woodbridge, Lauren <laurenxamelia@gmail.com>"
   ],
   "homepage": "https://ngOfficeUiFabric.com",
   "repository": {
