--- a/package.json
+++ b/package.json
@@ -52,63 +52,62 @@
     "commit": "git-cz"
   },
   "dependencies": {
-    "angular": "1.6.2",
+    "angular": "1.6.4",
     "office-ui-fabric": "2.6.3"
   },
   "devDependencies": {
     "@types/angular": "1.6.7",
     "@types/angular-animate": "1.5.6",
     "@types/angular-mocks": "1.5.9",
-    "@types/bluebird": "3.0.37",
-    "@types/browser-sync": "0.0.34",
+    "@types/bluebird": "3.5.4",
+    "@types/browser-sync": "0.0.35",
     "@types/chalk": "0.4.31",
-    "@types/chokidar": "1.4.31",
-    "@types/colors": "1.1.1",
+    "@types/chokidar": "1.6.0",
+    "@types/colors": "1.1.3",
     "@types/express": "4.0.35",
-    "@types/express-serve-static-core": "4.0.40",
-    "@types/glob": "^5.0.30",
-    "@types/gulp": "3.8.32",
-    "@types/gulp-concat": "0.0.29",
-    "@types/gulp-help": "0.0.32",
-    "@types/gulp-istanbul": "0.9.30",
-    "@types/gulp-load-plugins": "0.0.28",
-    "@types/gulp-rename": "0.0.31",
-    "@types/gulp-typescript": "0.0.32",
-    "@types/gulp-uglify": "0.0.29",
-    "@types/gulp-util": "3.0.30",
-    "@types/jasmine": "2.5.43",
-    "@types/jasmine-jquery": "1.5.29",
-    "@types/jquery": "2.0.40",
-    "@types/karma": "0.13.33",
+    "@types/express-serve-static-core": "4.0.45",
+    "@types/glob": "5.0.30",
+    "@types/gulp": "4.0.3",
+    "@types/gulp-concat": "0.0.30",
+    "@types/gulp-help": "0.0.33",
+    "@types/gulp-istanbul": "0.9.31",
+    "@types/gulp-load-plugins": "0.0.29",
+    "@types/gulp-rename": "0.0.32",
+    "@types/gulp-uglify": "0.0.30",
+    "@types/gulp-util": "3.0.31",
+    "@types/jasmine": "2.5.47",
+    "@types/jasmine-jquery": "1.5.30",
+    "@types/jquery": "2.0.45",
+    "@types/karma": "0.13.35",
     "@types/log4js": "0.0.32",
     "@types/micromatch": "2.3.29",
     "@types/mime": "0.0.29",
-    "@types/node": "7.0.5",
-    "@types/orchestrator": "0.0.30",
+    "@types/node": "7.0.22",
+    "@types/orchestrator": "0.3.0",
     "@types/parse-glob": "3.0.29",
     "@types/pickadate": "3.5.28",
-    "@types/q": "0.0.32",
-    "@types/run-sequence": "0.0.28",
+    "@types/q": "1.0.0",
+    "@types/run-sequence": "0.0.29",
     "@types/serve-static": "1.7.31",
     "@types/source-map": "0.5.0",
-    "@types/through2": "2.0.32",
-    "@types/tmp": "0.0.32",
+    "@types/through2": "2.0.33",
+    "@types/tmp": "0.0.33",
     "@types/uglify-js": "2.6.28",
     "@types/vinyl": "2.0.0",
     "@types/wallabyjs": "0.0.5",
-    "@types/webpack": "2.2.6",
-    "@types/xmldom": "^0.1.28",
+    "@types/webpack": "2.2.15",
+    "@types/xmldom": "0.1.28",
     "@types/yargs": "6.6.0",
-    "angular-animate": "1.6.2",
-    "angular-mocks": "1.6.2",
-    "angular-sanitize": "1.6.2",
-    "browser-sync": "2.18.8",
+    "angular-animate": "1.6.4",
+    "angular-mocks": "1.6.4",
+    "angular-sanitize": "1.6.4",
+    "browser-sync": "2.18.12",
     "chalk": "1.1.3",
     "commitizen": "2.9.6",
-    "coveralls": "2.11.16",
-    "cz-conventional-changelog": "1.2.0",
-    "eslint": "3.15.0",
-    "glob": "7.1.1",
+    "coveralls": "2.13.1",
+    "cz-conventional-changelog": "2.0.0",
+    "eslint": "3.19.0",
+    "glob": "7.1.2",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-debug": "3.1.0",
@@ -122,42 +121,42 @@
     "gulp-print": "2.0.1",
     "gulp-rename": "1.2.2",
     "gulp-rimraf": "0.2.1",
-    "gulp-sourcemaps": "2.4.1",
-    "gulp-strip-comments": "2.4.4",
+    "gulp-sourcemaps": "2.6.0",
+    "gulp-strip-comments": "2.4.5",
     "gulp-task-listing": "1.0.1",
-    "gulp-tslint": "7.1.0",
-    "gulp-typescript": "3.1.5",
-    "gulp-uglify": "2.0.1",
+    "gulp-tslint": "8.1.0",
+    "gulp-typescript": "3.1.7",
+    "gulp-uglify": "3.0.0",
     "gulp-util": "3.0.8",
     "istanbul": "0.4.5",
     "istanbul-instrumenter-loader": "2.0.0",
-    "jasmine-core": "2.5.2",
+    "jasmine-core": "2.6.2",
     "jasmine-jquery": "2.1.1",
-    "jquery": "3.1.1",
-    "karma": "1.5.0",
-    "karma-chrome-launcher": "2.0.0",
+    "jquery": "3.2.1",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-jquery": "0.1.1",
     "karma-junit-reporter": "1.2.0",
-    "karma-phantomjs-launcher": "1.0.2",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "2.0.2",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "2.0.3",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.14",
     "phantomjs2-ext": "0.2.2",
     "pickadate": "3.5.6",
     "run-sequence": "1.2.2",
-    "ts-loader": "2.0.0",
-    "tslint": "4.4.2",
-    "typescript": "2.1.6",
-    "wallaby-webpack": "0.0.33",
-    "webpack": "1.14.0",
+    "ts-loader": "2.1.0",
+    "tslint": "5.3.2",
+    "typescript": "2.3.3",
+    "wallaby-webpack": "0.0.38",
+    "webpack": "2.6.1",
     "webpack-stream": "3.2.0",
     "xmldom": "0.1.27",
-    "xpath": "0.0.23",
-    "yargs": "6.6.0"
+    "xpath": "0.0.24",
+    "yargs": "8.0.1"
   },
   "config": {
     "commitizen": {
