--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "lib": [ "es2015", "dom" ],
     "module": "commonjs",
-    "removeComments": true
+    "removeComments": true,
+    "target": "es5"
   },
   "exclude": [
     "node_modules"
