Revert "Change build to use yarn"
This reverts commit b9f8b1040bdbe9ea4feea4ab222f9a10c289b5fc.

--- a/circle.yml
+++ b/circle.yml
@@ -19,11 +19,11 @@ general:
 dependencies:
   pre:
     # install dependencies
-    - yarn install -g gulp
-    - yarn install -g typescript
+    - npm install -g gulp
+    - npm install -g typescript
   post:
     # compile typescript
-    - yarn run build:ts
+    - npm run build:ts
 
 test:
   pre:
